Assembly/y.output
Grammar

    0 $accept: Program $end

    1 Program: START Statement STOP

    2 @1: /* empty */

    3 Statement: LABEL COLON @1 Statement

    4 @2: /* empty */

    5 Statement: GOTO LABEL @2 Statement
    6          | IfStatement Statement
    7          | Expression Statement
    8          | AssignmentExpr Statement
    9          | /* empty */

   10 IfStatement: IF Variable LESSTHAN Variable GOTO LABEL
   11            | IF Variable LESSTHAN NUM GOTO LABEL
   12            | IF NUM LESSTHAN Variable GOTO LABEL
   13            | IF Variable GRTRTHAN Variable GOTO LABEL
   14            | IF Variable GRTRTHAN NUM GOTO LABEL
   15            | IF NUM GRTRTHAN Variable GOTO LABEL
   16            | IF Variable EQUALS EQUALS Variable GOTO LABEL
   17            | IF Variable EQUALS EQUALS NUM GOTO LABEL
   18            | IF NUM EQUALS EQUALS Variable GOTO LABEL
   19            | IF Variable GOTO LABEL
   20            | IF NUM GOTO LABEL
   21            | IF TRUE GOTO LABEL
   22            | IF FALSE GOTO LABEL

   23 Expression: Variable EQUALS Variable ADD Variable
   24           | Variable EQUALS Variable ADD NUM
   25           | Variable EQUALS NUM ADD Variable
   26           | Variable EQUALS NUM ADD NUM
   27           | Variable EQUALS Variable SUB Variable
   28           | Variable EQUALS Variable SUB NUM
   29           | Variable EQUALS NUM SUB Variable
   30           | Variable EQUALS Variable MUL Variable
   31           | Variable EQUALS Variable MUL NUM
   32           | Variable EQUALS NUM MUL Variable
   33           | Variable EQUALS Variable DIV Variable
   34           | Variable EQUALS Variable DIV NUM
   35           | Variable EQUALS NUM DIV Variable
   36           | Variable EQUALS Variable GRTRTHAN Variable
   37           | Variable EQUALS Variable GRTRTHAN NUM
   38           | Variable EQUALS NUM GRTRTHAN Variable
   39           | Variable EQUALS Variable LESSTHAN Variable
   40           | Variable EQUALS Variable LESSTHAN NUM
   41           | Variable EQUALS NUM LESSTHAN Variable
   42           | Variable EQUALS Variable EQUALS EQUALS Variable
   43           | Variable EQUALS Variable EQUALS EQUALS NUM
   44           | Variable EQUALS NUM EQUALS EQUALS Variable
   45           | Variable EQUALS Variable GRTRTHAN EQUALS Variable
   46           | Variable EQUALS Variable GRTRTHAN EQUALS NUM
   47           | Variable EQUALS NUM GRTRTHAN EQUALS Variable
   48           | Variable EQUALS Variable LESSTHAN EQUALS Variable
   49           | Variable EQUALS Variable LESSTHAN EQUALS NUM
   50           | Variable EQUALS NUM LESSTHAN EQUALS Variable

   51 AssignmentExpr: Variable EQUALS Variable
   52               | Variable EQUALS NUM

   53 Variable: VAR
   54         | TEMP


Terminals, with rules where they appear

$end (0) 0
error (256)
START (258) 1
STOP (259) 1
LABEL (260) 3 5 10 11 12 13 14 15 16 17 18 19 20 21 22
COLON (261) 3
TEMP (262) 54
EQUALS (263) 16 17 18 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
IF (264) 10 11 12 13 14 15 16 17 18 19 20 21 22
TRUE (265) 21
FALSE (266) 22
GOTO (267) 5 10 11 12 13 14 15 16 17 18 19 20 21 22
VAR (268) 53
NUM (269) 11 12 14 15 17 18 20 24 25 26 28 29 31 32 34 35 37 38 40
    41 43 44 46 47 49 50 52
LESSTHAN (270) 10 11 12 39 40 41 48 49 50
GRTRTHAN (271) 13 14 15 36 37 38 45 46 47
ADD (272) 23 24 25 26
SUB (273) 27 28 29
MUL (274) 30 31 32
DIV (275) 33 34 35


Nonterminals, with rules where they appear

$accept (21)
    on left: 0
Program (22)
    on left: 1, on right: 0
Statement (23)
    on left: 3 5 6 7 8 9, on right: 1 3 5 6 7 8
@1 (24)
    on left: 2, on right: 3
@2 (25)
    on left: 4, on right: 5
IfStatement (26)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22,
    on right: 6
Expression (27)
    on left: 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40
    41 42 43 44 45 46 47 48 49 50, on right: 7
AssignmentExpr (28)
    on left: 51 52, on right: 8
Variable (29)
    on left: 53 54, on right: 10 11 12 13 14 15 16 17 18 19 23 24 25
    26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46
    47 48 49 50 51 52


state 0

    0 $accept: . Program $end

    START  shift, and go to state 1

    Program  go to state 2


state 1

    1 Program: START . Statement STOP

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 8
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 13


state 3

    3 Statement: LABEL . COLON @1 Statement

    COLON  shift, and go to state 14


state 4

   54 Variable: TEMP .

    $default  reduce using rule 54 (Variable)


state 5

   10 IfStatement: IF . Variable LESSTHAN Variable GOTO LABEL
   11            | IF . Variable LESSTHAN NUM GOTO LABEL
   12            | IF . NUM LESSTHAN Variable GOTO LABEL
   13            | IF . Variable GRTRTHAN Variable GOTO LABEL
   14            | IF . Variable GRTRTHAN NUM GOTO LABEL
   15            | IF . NUM GRTRTHAN Variable GOTO LABEL
   16            | IF . Variable EQUALS EQUALS Variable GOTO LABEL
   17            | IF . Variable EQUALS EQUALS NUM GOTO LABEL
   18            | IF . NUM EQUALS EQUALS Variable GOTO LABEL
   19            | IF . Variable GOTO LABEL
   20            | IF . NUM GOTO LABEL
   21            | IF . TRUE GOTO LABEL
   22            | IF . FALSE GOTO LABEL

    TEMP   shift, and go to state 4
    TRUE   shift, and go to state 15
    FALSE  shift, and go to state 16
    VAR    shift, and go to state 7
    NUM    shift, and go to state 17

    Variable  go to state 18


state 6

    5 Statement: GOTO . LABEL @2 Statement

    LABEL  shift, and go to state 19


state 7

   53 Variable: VAR .

    $default  reduce using rule 53 (Variable)


state 8

    1 Program: START Statement . STOP

    STOP  shift, and go to state 20


state 9

    6 Statement: IfStatement . Statement

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 21
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 10

    7 Statement: Expression . Statement

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 22
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 11

    8 Statement: AssignmentExpr . Statement

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 23
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 12

   23 Expression: Variable . EQUALS Variable ADD Variable
   24           | Variable . EQUALS Variable ADD NUM
   25           | Variable . EQUALS NUM ADD Variable
   26           | Variable . EQUALS NUM ADD NUM
   27           | Variable . EQUALS Variable SUB Variable
   28           | Variable . EQUALS Variable SUB NUM
   29           | Variable . EQUALS NUM SUB Variable
   30           | Variable . EQUALS Variable MUL Variable
   31           | Variable . EQUALS Variable MUL NUM
   32           | Variable . EQUALS NUM MUL Variable
   33           | Variable . EQUALS Variable DIV Variable
   34           | Variable . EQUALS Variable DIV NUM
   35           | Variable . EQUALS NUM DIV Variable
   36           | Variable . EQUALS Variable GRTRTHAN Variable
   37           | Variable . EQUALS Variable GRTRTHAN NUM
   38           | Variable . EQUALS NUM GRTRTHAN Variable
   39           | Variable . EQUALS Variable LESSTHAN Variable
   40           | Variable . EQUALS Variable LESSTHAN NUM
   41           | Variable . EQUALS NUM LESSTHAN Variable
   42           | Variable . EQUALS Variable EQUALS EQUALS Variable
   43           | Variable . EQUALS Variable EQUALS EQUALS NUM
   44           | Variable . EQUALS NUM EQUALS EQUALS Variable
   45           | Variable . EQUALS Variable GRTRTHAN EQUALS Variable
   46           | Variable . EQUALS Variable GRTRTHAN EQUALS NUM
   47           | Variable . EQUALS NUM GRTRTHAN EQUALS Variable
   48           | Variable . EQUALS Variable LESSTHAN EQUALS Variable
   49           | Variable . EQUALS Variable LESSTHAN EQUALS NUM
   50           | Variable . EQUALS NUM LESSTHAN EQUALS Variable
   51 AssignmentExpr: Variable . EQUALS Variable
   52               | Variable . EQUALS NUM

    EQUALS  shift, and go to state 24


state 13

    0 $accept: Program $end .

    $default  accept


state 14

    3 Statement: LABEL COLON . @1 Statement

    $default  reduce using rule 2 (@1)

    @1  go to state 25


state 15

   21 IfStatement: IF TRUE . GOTO LABEL

    GOTO  shift, and go to state 26


state 16

   22 IfStatement: IF FALSE . GOTO LABEL

    GOTO  shift, and go to state 27


state 17

   12 IfStatement: IF NUM . LESSTHAN Variable GOTO LABEL
   15            | IF NUM . GRTRTHAN Variable GOTO LABEL
   18            | IF NUM . EQUALS EQUALS Variable GOTO LABEL
   20            | IF NUM . GOTO LABEL

    EQUALS    shift, and go to state 28
    GOTO      shift, and go to state 29
    LESSTHAN  shift, and go to state 30
    GRTRTHAN  shift, and go to state 31


state 18

   10 IfStatement: IF Variable . LESSTHAN Variable GOTO LABEL
   11            | IF Variable . LESSTHAN NUM GOTO LABEL
   13            | IF Variable . GRTRTHAN Variable GOTO LABEL
   14            | IF Variable . GRTRTHAN NUM GOTO LABEL
   16            | IF Variable . EQUALS EQUALS Variable GOTO LABEL
   17            | IF Variable . EQUALS EQUALS NUM GOTO LABEL
   19            | IF Variable . GOTO LABEL

    EQUALS    shift, and go to state 32
    GOTO      shift, and go to state 33
    LESSTHAN  shift, and go to state 34
    GRTRTHAN  shift, and go to state 35


state 19

    5 Statement: GOTO LABEL . @2 Statement

    $default  reduce using rule 4 (@2)

    @2  go to state 36


state 20

    1 Program: START Statement STOP .

    $default  reduce using rule 1 (Program)


state 21

    6 Statement: IfStatement Statement .

    $default  reduce using rule 6 (Statement)


state 22

    7 Statement: Expression Statement .

    $default  reduce using rule 7 (Statement)


state 23

    8 Statement: AssignmentExpr Statement .

    $default  reduce using rule 8 (Statement)


state 24

   23 Expression: Variable EQUALS . Variable ADD Variable
   24           | Variable EQUALS . Variable ADD NUM
   25           | Variable EQUALS . NUM ADD Variable
   26           | Variable EQUALS . NUM ADD NUM
   27           | Variable EQUALS . Variable SUB Variable
   28           | Variable EQUALS . Variable SUB NUM
   29           | Variable EQUALS . NUM SUB Variable
   30           | Variable EQUALS . Variable MUL Variable
   31           | Variable EQUALS . Variable MUL NUM
   32           | Variable EQUALS . NUM MUL Variable
   33           | Variable EQUALS . Variable DIV Variable
   34           | Variable EQUALS . Variable DIV NUM
   35           | Variable EQUALS . NUM DIV Variable
   36           | Variable EQUALS . Variable GRTRTHAN Variable
   37           | Variable EQUALS . Variable GRTRTHAN NUM
   38           | Variable EQUALS . NUM GRTRTHAN Variable
   39           | Variable EQUALS . Variable LESSTHAN Variable
   40           | Variable EQUALS . Variable LESSTHAN NUM
   41           | Variable EQUALS . NUM LESSTHAN Variable
   42           | Variable EQUALS . Variable EQUALS EQUALS Variable
   43           | Variable EQUALS . Variable EQUALS EQUALS NUM
   44           | Variable EQUALS . NUM EQUALS EQUALS Variable
   45           | Variable EQUALS . Variable GRTRTHAN EQUALS Variable
   46           | Variable EQUALS . Variable GRTRTHAN EQUALS NUM
   47           | Variable EQUALS . NUM GRTRTHAN EQUALS Variable
   48           | Variable EQUALS . Variable LESSTHAN EQUALS Variable
   49           | Variable EQUALS . Variable LESSTHAN EQUALS NUM
   50           | Variable EQUALS . NUM LESSTHAN EQUALS Variable
   51 AssignmentExpr: Variable EQUALS . Variable
   52               | Variable EQUALS . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 37

    Variable  go to state 38


state 25

    3 Statement: LABEL COLON @1 . Statement

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 39
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 26

   21 IfStatement: IF TRUE GOTO . LABEL

    LABEL  shift, and go to state 40


state 27

   22 IfStatement: IF FALSE GOTO . LABEL

    LABEL  shift, and go to state 41


state 28

   18 IfStatement: IF NUM EQUALS . EQUALS Variable GOTO LABEL

    EQUALS  shift, and go to state 42


state 29

   20 IfStatement: IF NUM GOTO . LABEL

    LABEL  shift, and go to state 43


state 30

   12 IfStatement: IF NUM LESSTHAN . Variable GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 44


state 31

   15 IfStatement: IF NUM GRTRTHAN . Variable GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 45


state 32

   16 IfStatement: IF Variable EQUALS . EQUALS Variable GOTO LABEL
   17            | IF Variable EQUALS . EQUALS NUM GOTO LABEL

    EQUALS  shift, and go to state 46


state 33

   19 IfStatement: IF Variable GOTO . LABEL

    LABEL  shift, and go to state 47


state 34

   10 IfStatement: IF Variable LESSTHAN . Variable GOTO LABEL
   11            | IF Variable LESSTHAN . NUM GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 48

    Variable  go to state 49


state 35

   13 IfStatement: IF Variable GRTRTHAN . Variable GOTO LABEL
   14            | IF Variable GRTRTHAN . NUM GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 50

    Variable  go to state 51


state 36

    5 Statement: GOTO LABEL @2 . Statement

    LABEL  shift, and go to state 3
    TEMP   shift, and go to state 4
    IF     shift, and go to state 5
    GOTO   shift, and go to state 6
    VAR    shift, and go to state 7

    $default  reduce using rule 9 (Statement)

    Statement       go to state 52
    IfStatement     go to state 9
    Expression      go to state 10
    AssignmentExpr  go to state 11
    Variable        go to state 12


state 37

   25 Expression: Variable EQUALS NUM . ADD Variable
   26           | Variable EQUALS NUM . ADD NUM
   29           | Variable EQUALS NUM . SUB Variable
   32           | Variable EQUALS NUM . MUL Variable
   35           | Variable EQUALS NUM . DIV Variable
   38           | Variable EQUALS NUM . GRTRTHAN Variable
   41           | Variable EQUALS NUM . LESSTHAN Variable
   44           | Variable EQUALS NUM . EQUALS EQUALS Variable
   47           | Variable EQUALS NUM . GRTRTHAN EQUALS Variable
   50           | Variable EQUALS NUM . LESSTHAN EQUALS Variable
   52 AssignmentExpr: Variable EQUALS NUM .

    EQUALS    shift, and go to state 53
    LESSTHAN  shift, and go to state 54
    GRTRTHAN  shift, and go to state 55
    ADD       shift, and go to state 56
    SUB       shift, and go to state 57
    MUL       shift, and go to state 58
    DIV       shift, and go to state 59

    $default  reduce using rule 52 (AssignmentExpr)


state 38

   23 Expression: Variable EQUALS Variable . ADD Variable
   24           | Variable EQUALS Variable . ADD NUM
   27           | Variable EQUALS Variable . SUB Variable
   28           | Variable EQUALS Variable . SUB NUM
   30           | Variable EQUALS Variable . MUL Variable
   31           | Variable EQUALS Variable . MUL NUM
   33           | Variable EQUALS Variable . DIV Variable
   34           | Variable EQUALS Variable . DIV NUM
   36           | Variable EQUALS Variable . GRTRTHAN Variable
   37           | Variable EQUALS Variable . GRTRTHAN NUM
   39           | Variable EQUALS Variable . LESSTHAN Variable
   40           | Variable EQUALS Variable . LESSTHAN NUM
   42           | Variable EQUALS Variable . EQUALS EQUALS Variable
   43           | Variable EQUALS Variable . EQUALS EQUALS NUM
   45           | Variable EQUALS Variable . GRTRTHAN EQUALS Variable
   46           | Variable EQUALS Variable . GRTRTHAN EQUALS NUM
   48           | Variable EQUALS Variable . LESSTHAN EQUALS Variable
   49           | Variable EQUALS Variable . LESSTHAN EQUALS NUM
   51 AssignmentExpr: Variable EQUALS Variable .

    EQUALS    shift, and go to state 60
    LESSTHAN  shift, and go to state 61
    GRTRTHAN  shift, and go to state 62
    ADD       shift, and go to state 63
    SUB       shift, and go to state 64
    MUL       shift, and go to state 65
    DIV       shift, and go to state 66

    $default  reduce using rule 51 (AssignmentExpr)


state 39

    3 Statement: LABEL COLON @1 Statement .

    $default  reduce using rule 3 (Statement)


state 40

   21 IfStatement: IF TRUE GOTO LABEL .

    $default  reduce using rule 21 (IfStatement)


state 41

   22 IfStatement: IF FALSE GOTO LABEL .

    $default  reduce using rule 22 (IfStatement)


state 42

   18 IfStatement: IF NUM EQUALS EQUALS . Variable GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 67


state 43

   20 IfStatement: IF NUM GOTO LABEL .

    $default  reduce using rule 20 (IfStatement)


state 44

   12 IfStatement: IF NUM LESSTHAN Variable . GOTO LABEL

    GOTO  shift, and go to state 68


state 45

   15 IfStatement: IF NUM GRTRTHAN Variable . GOTO LABEL

    GOTO  shift, and go to state 69


state 46

   16 IfStatement: IF Variable EQUALS EQUALS . Variable GOTO LABEL
   17            | IF Variable EQUALS EQUALS . NUM GOTO LABEL

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 70

    Variable  go to state 71


state 47

   19 IfStatement: IF Variable GOTO LABEL .

    $default  reduce using rule 19 (IfStatement)


state 48

   11 IfStatement: IF Variable LESSTHAN NUM . GOTO LABEL

    GOTO  shift, and go to state 72


state 49

   10 IfStatement: IF Variable LESSTHAN Variable . GOTO LABEL

    GOTO  shift, and go to state 73


state 50

   14 IfStatement: IF Variable GRTRTHAN NUM . GOTO LABEL

    GOTO  shift, and go to state 74


state 51

   13 IfStatement: IF Variable GRTRTHAN Variable . GOTO LABEL

    GOTO  shift, and go to state 75


state 52

    5 Statement: GOTO LABEL @2 Statement .

    $default  reduce using rule 5 (Statement)


state 53

   44 Expression: Variable EQUALS NUM EQUALS . EQUALS Variable

    EQUALS  shift, and go to state 76


state 54

   41 Expression: Variable EQUALS NUM LESSTHAN . Variable
   50           | Variable EQUALS NUM LESSTHAN . EQUALS Variable

    TEMP    shift, and go to state 4
    EQUALS  shift, and go to state 77
    VAR     shift, and go to state 7

    Variable  go to state 78


state 55

   38 Expression: Variable EQUALS NUM GRTRTHAN . Variable
   47           | Variable EQUALS NUM GRTRTHAN . EQUALS Variable

    TEMP    shift, and go to state 4
    EQUALS  shift, and go to state 79
    VAR     shift, and go to state 7

    Variable  go to state 80


state 56

   25 Expression: Variable EQUALS NUM ADD . Variable
   26           | Variable EQUALS NUM ADD . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 81

    Variable  go to state 82


state 57

   29 Expression: Variable EQUALS NUM SUB . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 83


state 58

   32 Expression: Variable EQUALS NUM MUL . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 84


state 59

   35 Expression: Variable EQUALS NUM DIV . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 85


state 60

   42 Expression: Variable EQUALS Variable EQUALS . EQUALS Variable
   43           | Variable EQUALS Variable EQUALS . EQUALS NUM

    EQUALS  shift, and go to state 86


state 61

   39 Expression: Variable EQUALS Variable LESSTHAN . Variable
   40           | Variable EQUALS Variable LESSTHAN . NUM
   48           | Variable EQUALS Variable LESSTHAN . EQUALS Variable
   49           | Variable EQUALS Variable LESSTHAN . EQUALS NUM

    TEMP    shift, and go to state 4
    EQUALS  shift, and go to state 87
    VAR     shift, and go to state 7
    NUM     shift, and go to state 88

    Variable  go to state 89


state 62

   36 Expression: Variable EQUALS Variable GRTRTHAN . Variable
   37           | Variable EQUALS Variable GRTRTHAN . NUM
   45           | Variable EQUALS Variable GRTRTHAN . EQUALS Variable
   46           | Variable EQUALS Variable GRTRTHAN . EQUALS NUM

    TEMP    shift, and go to state 4
    EQUALS  shift, and go to state 90
    VAR     shift, and go to state 7
    NUM     shift, and go to state 91

    Variable  go to state 92


state 63

   23 Expression: Variable EQUALS Variable ADD . Variable
   24           | Variable EQUALS Variable ADD . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 93

    Variable  go to state 94


state 64

   27 Expression: Variable EQUALS Variable SUB . Variable
   28           | Variable EQUALS Variable SUB . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 95

    Variable  go to state 96


state 65

   30 Expression: Variable EQUALS Variable MUL . Variable
   31           | Variable EQUALS Variable MUL . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 97

    Variable  go to state 98


state 66

   33 Expression: Variable EQUALS Variable DIV . Variable
   34           | Variable EQUALS Variable DIV . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 99

    Variable  go to state 100


state 67

   18 IfStatement: IF NUM EQUALS EQUALS Variable . GOTO LABEL

    GOTO  shift, and go to state 101


state 68

   12 IfStatement: IF NUM LESSTHAN Variable GOTO . LABEL

    LABEL  shift, and go to state 102


state 69

   15 IfStatement: IF NUM GRTRTHAN Variable GOTO . LABEL

    LABEL  shift, and go to state 103


state 70

   17 IfStatement: IF Variable EQUALS EQUALS NUM . GOTO LABEL

    GOTO  shift, and go to state 104


state 71

   16 IfStatement: IF Variable EQUALS EQUALS Variable . GOTO LABEL

    GOTO  shift, and go to state 105


state 72

   11 IfStatement: IF Variable LESSTHAN NUM GOTO . LABEL

    LABEL  shift, and go to state 106


state 73

   10 IfStatement: IF Variable LESSTHAN Variable GOTO . LABEL

    LABEL  shift, and go to state 107


state 74

   14 IfStatement: IF Variable GRTRTHAN NUM GOTO . LABEL

    LABEL  shift, and go to state 108


state 75

   13 IfStatement: IF Variable GRTRTHAN Variable GOTO . LABEL

    LABEL  shift, and go to state 109


state 76

   44 Expression: Variable EQUALS NUM EQUALS EQUALS . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 110


state 77

   50 Expression: Variable EQUALS NUM LESSTHAN EQUALS . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 111


state 78

   41 Expression: Variable EQUALS NUM LESSTHAN Variable .

    $default  reduce using rule 41 (Expression)


state 79

   47 Expression: Variable EQUALS NUM GRTRTHAN EQUALS . Variable

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7

    Variable  go to state 112


state 80

   38 Expression: Variable EQUALS NUM GRTRTHAN Variable .

    $default  reduce using rule 38 (Expression)


state 81

   26 Expression: Variable EQUALS NUM ADD NUM .

    $default  reduce using rule 26 (Expression)


state 82

   25 Expression: Variable EQUALS NUM ADD Variable .

    $default  reduce using rule 25 (Expression)


state 83

   29 Expression: Variable EQUALS NUM SUB Variable .

    $default  reduce using rule 29 (Expression)


state 84

   32 Expression: Variable EQUALS NUM MUL Variable .

    $default  reduce using rule 32 (Expression)


state 85

   35 Expression: Variable EQUALS NUM DIV Variable .

    $default  reduce using rule 35 (Expression)


state 86

   42 Expression: Variable EQUALS Variable EQUALS EQUALS . Variable
   43           | Variable EQUALS Variable EQUALS EQUALS . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 113

    Variable  go to state 114


state 87

   48 Expression: Variable EQUALS Variable LESSTHAN EQUALS . Variable
   49           | Variable EQUALS Variable LESSTHAN EQUALS . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 115

    Variable  go to state 116


state 88

   40 Expression: Variable EQUALS Variable LESSTHAN NUM .

    $default  reduce using rule 40 (Expression)


state 89

   39 Expression: Variable EQUALS Variable LESSTHAN Variable .

    $default  reduce using rule 39 (Expression)


state 90

   45 Expression: Variable EQUALS Variable GRTRTHAN EQUALS . Variable
   46           | Variable EQUALS Variable GRTRTHAN EQUALS . NUM

    TEMP  shift, and go to state 4
    VAR   shift, and go to state 7
    NUM   shift, and go to state 117

    Variable  go to state 118


state 91

   37 Expression: Variable EQUALS Variable GRTRTHAN NUM .

    $default  reduce using rule 37 (Expression)


state 92

   36 Expression: Variable EQUALS Variable GRTRTHAN Variable .

    $default  reduce using rule 36 (Expression)


state 93

   24 Expression: Variable EQUALS Variable ADD NUM .

    $default  reduce using rule 24 (Expression)


state 94

   23 Expression: Variable EQUALS Variable ADD Variable .

    $default  reduce using rule 23 (Expression)


state 95

   28 Expression: Variable EQUALS Variable SUB NUM .

    $default  reduce using rule 28 (Expression)


state 96

   27 Expression: Variable EQUALS Variable SUB Variable .

    $default  reduce using rule 27 (Expression)


state 97

   31 Expression: Variable EQUALS Variable MUL NUM .

    $default  reduce using rule 31 (Expression)


state 98

   30 Expression: Variable EQUALS Variable MUL Variable .

    $default  reduce using rule 30 (Expression)


state 99

   34 Expression: Variable EQUALS Variable DIV NUM .

    $default  reduce using rule 34 (Expression)


state 100

   33 Expression: Variable EQUALS Variable DIV Variable .

    $default  reduce using rule 33 (Expression)


state 101

   18 IfStatement: IF NUM EQUALS EQUALS Variable GOTO . LABEL

    LABEL  shift, and go to state 119


state 102

   12 IfStatement: IF NUM LESSTHAN Variable GOTO LABEL .

    $default  reduce using rule 12 (IfStatement)


state 103

   15 IfStatement: IF NUM GRTRTHAN Variable GOTO LABEL .

    $default  reduce using rule 15 (IfStatement)


state 104

   17 IfStatement: IF Variable EQUALS EQUALS NUM GOTO . LABEL

    LABEL  shift, and go to state 120


state 105

   16 IfStatement: IF Variable EQUALS EQUALS Variable GOTO . LABEL

    LABEL  shift, and go to state 121


state 106

   11 IfStatement: IF Variable LESSTHAN NUM GOTO LABEL .

    $default  reduce using rule 11 (IfStatement)


state 107

   10 IfStatement: IF Variable LESSTHAN Variable GOTO LABEL .

    $default  reduce using rule 10 (IfStatement)


state 108

   14 IfStatement: IF Variable GRTRTHAN NUM GOTO LABEL .

    $default  reduce using rule 14 (IfStatement)


state 109

   13 IfStatement: IF Variable GRTRTHAN Variable GOTO LABEL .

    $default  reduce using rule 13 (IfStatement)


state 110

   44 Expression: Variable EQUALS NUM EQUALS EQUALS Variable .

    $default  reduce using rule 44 (Expression)


state 111

   50 Expression: Variable EQUALS NUM LESSTHAN EQUALS Variable .

    $default  reduce using rule 50 (Expression)


state 112

   47 Expression: Variable EQUALS NUM GRTRTHAN EQUALS Variable .

    $default  reduce using rule 47 (Expression)


state 113

   43 Expression: Variable EQUALS Variable EQUALS EQUALS NUM .

    $default  reduce using rule 43 (Expression)


state 114

   42 Expression: Variable EQUALS Variable EQUALS EQUALS Variable .

    $default  reduce using rule 42 (Expression)


state 115

   49 Expression: Variable EQUALS Variable LESSTHAN EQUALS NUM .

    $default  reduce using rule 49 (Expression)


state 116

   48 Expression: Variable EQUALS Variable LESSTHAN EQUALS Variable .

    $default  reduce using rule 48 (Expression)


state 117

   46 Expression: Variable EQUALS Variable GRTRTHAN EQUALS NUM .

    $default  reduce using rule 46 (Expression)


state 118

   45 Expression: Variable EQUALS Variable GRTRTHAN EQUALS Variable .

    $default  reduce using rule 45 (Expression)


state 119

   18 IfStatement: IF NUM EQUALS EQUALS Variable GOTO LABEL .

    $default  reduce using rule 18 (IfStatement)


state 120

   17 IfStatement: IF Variable EQUALS EQUALS NUM GOTO LABEL .

    $default  reduce using rule 17 (IfStatement)


state 121

   16 IfStatement: IF Variable EQUALS EQUALS Variable GOTO LABEL .

    $default  reduce using rule 16 (IfStatement)
